--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </center>
 	<br>
     <div class="video-wrapper">
-        <video autoplay loop playsinline controls poster="https://cdn.aceimg.com/4d7d069d5.png">
+        <video autoplay loop playsinline controls poster="https://cdn.aceimg.com/4d7d069d5.jpg">
             <source src="https://cdn.videy.co/L5gzCG6o1.mp4" type="video/mp4">
         </video>
 		<div style="text-align: center; margin: 30px 0;">
