--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </style>
 </head>
 <body>
-    <div class="video-title">OMG, Auntie vs two gamers<span aria-label="smile" role="img"></span></div>
+    <div class="video-title">Auntie didn't care about sound<span aria-label="smile" role="img"></span></div>
     <center><script type="text/javascript">
   atOptions = {
   	'key' : '179d6adf9be6163c10da4adfc7343297',
